--- a/16sDatabases/README
+++ b/16sDatabases/README
@@ -1,5 +1,7 @@
 #Build the FM-index 16sDatabase using the genFm9
 #here there is an example
 unzip rdp.zip
+cd rpd
 genFm9 -multiFasta rdp.fna -output rdp
-
+or 
+bwa index  rdp.fna
